--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -291,10 +291,12 @@ dtb-$(CONFIG_ARCH_MDM9607) += mdm9607-rumi.dtb \
 	mdm9206-rcm.dtb
 
 ifneq ($(CONFIG_ARCH_SONY_KANUTI), y)
+ifneq ($(CONFIG_TEST_ONLY), y)
 dtb-$(CONFIG_ARCH_MSM8916) += msm8952-qrd-skum.dtb \
        msm8952-cdp.dtb \
        msm8952-ext-codec-cdp.dtb \
        msm8952-mtp.dtb
+endif
 endif
 
 dtb-$(CONFIG_ARCH_MSM8909) += msm8909-pm8916-mtp.dtb \
@@ -344,6 +346,10 @@ dtb-$(CONFIG_ARCH_MSM8909) += msm8909-pm8916-mtp.dtb \
 	msm8909-1gb-cdp.dtb \
 	apq8009-ext-codec-dragon.dtb \
 	apq8009-dragon.dtb
+
+dtb-$(CONFIG_ARCH_MSM8916) += \
+	test01a-msm8939-qrd-skuk.dtb \
+	test01a-msm8939-v3.0-qrd-skuk.dtb
 
 ifeq ($(CONFIG_ARM64),y)
 always          := $(dtb-y)
