mobee01a: Added initial mobee01a
Signed-off-by: Mohd Faraz <androiabledroid@gmail.com>
Signed-off-by: Mohd Faraz <mohd.faraz.abc@gmail.com>

--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -76,6 +76,11 @@ obj-$(CONFIG_SENSORS_LTR553)	+= ltr553.o
 obj-$(CONFIG_SENSORS_BMA2X2)	+= bstclass.o
 
 obj-$(CONFIG_SENSORS_BMA2X2)	+= bma2x2.o
+obj-$(CONFIG_SENSORS_LTR553)	+= ltr553.o
+obj-$(CONFIG_SENSORS_ST480_TEST_PLUS)     += st480_test_plus.o
+obj-$(CONFIG_SENSORS_ST480_TEST)     += st480_test.o
+obj-$(CONFIG_SENSORS_LTR553_TEST_PLUS)	+= ltr553_test_plus.o
+obj-$(CONFIG_SENSORS_LTR553_TEST)	+= ltr553_test.o
 ifeq ($(CONFIG_SENSORS_BMA2X2_ENABLE_INT1),y)
 	EXTRA_CFLAGS += -DBMA2X2_ENABLE_INT1
 endif
@@ -86,3 +91,6 @@ endif
 obj-$(CONFIG_INPUT_IDEAPAD_SLIDEBAR)	+= ideapad_slidebar.o
 obj-$(CONFIG_INPUT_PIXART_OTS_PAT9125_SWITCH)	+= ots_pat9125/
 obj-$(CONFIG_STMVL53L0X)	+= vl53l0x/
+obj-$(CONFIG_INPUT_LSM6DS3) += lsm6ds3.o
+lsm6ds3-y := lsm6ds3_core.o
+obj-$(CONFIG_INPUT_LSM6DS3_I2C) += lsm6ds3_i2c.o
