dts: some more dts removal
 * Since our board is msm8939v2 so it support both dts we dont need v2 dts to get proper fixing and updates.

Signed-off-by: AndroiableDroid <androiabledroid@gmail.com>

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -348,8 +348,7 @@ dtb-$(CONFIG_ARCH_MSM8909) += msm8909-pm8916-mtp.dtb \
 	apq8009-dragon.dtb
 
 ifeq ($(CONFIG_TEST_ONLY),y)
-dtb-$(CONFIG_ARCH_MSM8916) += test01a-msm8939-qrd-skuk.dtb \
-	test01a-msm8939-v3.0-qrd-skuk.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += test01a-msm8939-qrd-skuk.dtb
 else ifeq ($(CONFIG_TESTPLUS_ONLY),y)
 dtb-$(CONFIG_ARCH_MSM8916) += test01a-msm8939-qrd-skuk.dtb \
 	test01a-msm8939-v3.0-qrd-skuk.dtb
