--- a/arch/arm64/configs/mobee01a_defconfig
+++ b/arch/arm64/configs/mobee01a_defconfig
@@ -1,5 +1,5 @@
-
 CONFIG_PROC_DEVICETREE=y
+CONFIG_ARM_SMMU=y
 # CONFIG DEVPORT is not set
 CONFIG_LOCALVERSION="-@ndroiableDroid™"
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
@@ -47,7 +47,8 @@ CONFIG_PREEMPT=y
 CONFIG_ARMV7_COMPAT=y
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="test01a-msm8939-qrd-skuk"
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_PROCESS_RECLAIM=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
@@ -470,7 +471,7 @@ CONFIG_MSM_BUS_SCALING=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_MSM_MDSS_PLL=y
 CONFIG_REMOTE_SPINLOCK_MSM=y
-CONFIG_MSM_IOMMU_V1=y
+#CONFIG_MSM_IOMMU_V1=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 # CONFIG_CORESIGHT is not set
