--- a/arch/arm64/configs/mobee01a_defconfig
+++ b/arch/arm64/configs/mobee01a_defconfig
@@ -36,8 +36,8 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=5
 # CONFIG_KALLSYMS_ALL is not set
 CONFIG_EMBEDDED=y
-CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
+CONFIG_PROFILING=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
@@ -266,17 +266,6 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=y
-#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v21=y
-#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21=y
-#CONFIG_TOUCHSCREEN_ATMEL_MXT=y
-#CONFIG_TOUCHSCREEN_FT5X06=y
-#CONFIG_TOUCHSCREEN_MSTAR21XX=y
-#CONFIG_TOUCHSCREEN_GEN_VKEYS=y
-#CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
-#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
-#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
-#CONFIG_TOUCHSCREEN_BU21150=y
 CONFIG_TOUCHSCREEN_MELFAS_MMS449=y
 CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_MISC=y
@@ -304,26 +293,27 @@ CONFIG_MSM_ADSPRPC=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MSM_V2=y
+CONFIG_SLIMBUS=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
+CONFIG_SOUNDWIRE_WCD_CTRL=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
 CONFIG_SPI_SPIDEV=y
-CONFIG_SPMI=y
+# CONFIG_SPMI is not set
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
 CONFIG_USE_PINCTRL_IRQ=y
-CONFIG_PINCTRL_MSM_TLMM=y
+CONFIG_PINCTRL_MSM8939=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
 CONFIG_SMB135X_CHARGER=n
-CONFIG_SMB1360_CHARGER_FG=n
-CONFIG_SMB1360_CHARGER_FG_TEST=y
+CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_BATTERY_BCL=n
 CONFIG_QPNP_VM_BMS=n
 CONFIG_QPNP_LINEAR_CHARGER=n
 CONFIG_POWER_RESET_MSM=y
-# CONFIG_MSM_DLOAD_MODE is not set
+CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MSM_PRESERVE_MEM=y
 CONFIG_MSM_PM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
@@ -331,7 +321,7 @@ CONFIG_THERMAL=y
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
-CONFIG_THERMAL_QPNP_ADC_TM=y
+CONFIG_THERMAL_QPNP_ADC_TM=n
 CONFIG_REGULATOR=y
 CONFIG_WCD9335_CODEC=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
@@ -372,6 +362,7 @@ CONFIG_MSM_VIDC_V4L2=y
 CONFIG_RADIO_IRIS=y
 CONFIG_RADIO_IRIS_TRANSPORT=y
 CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_LEGACY=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_FB=y
 CONFIG_FB_MSM=y
@@ -466,12 +457,14 @@ CONFIG_QPNP_VIBRATOR=y
 CONFIG_QPNP_REVID=y
 CONFIG_QPNP_COINCELL=y
 CONFIG_MSM_AVTIMER=y
-CONFIG_PFT=y
+#CONFIG_PFT=y
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_MSM_MDSS_PLL=y
 CONFIG_REMOTE_SPINLOCK_MSM=y
 #CONFIG_MSM_IOMMU_V1=y
+CONFIG_SPDM_SCM=y
+CONFIG_DEVFREQ_SPDM=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 # CONFIG_CORESIGHT is not set
@@ -504,6 +497,8 @@ CONFIG_MSM_SMEM=y
 CONFIG_MSM_SMEM_LOGGING=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
+CONFIG_MSM_SPMI_PMIC_ARB=y
+CONFIG_MSM_SPMI=y
 CONFIG_MSM_SPM=y
 CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_ADSP_LOADER=y
@@ -581,8 +576,10 @@ CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
-CONFIG_CRYPTO_DEV_QCE=y
+CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
+CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
+CONFIG_CRYPTO_DEV_QCOM_ICE=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -596,8 +593,8 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_UID_CPUTIME=y
 CONFIG_TEST_ONLY=y
 CONFIG_INPUT_LSM6DS3=y
-CONFIG_SENSORS_ST480_TEST=y
-CONFIG_SENSORS_LTR553_TEST=y
+CONFIG_SENSORS_ST480=y
+CONFIG_SENSORS_LTR553=y
 
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
