--- a/arch/arm64/configs/test01a_msm_defconfig
+++ b/arch/arm64/configs/test01a_msm_defconfig
@@ -46,7 +46,8 @@ CONFIG_PREEMPT=y
 CONFIG_ARMV7_COMPAT=y
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="test01a-msm8939-qrd-skuk"
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_PROCESS_RECLAIM=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
