--- a/arch/arm/boot/dts/qcom/test01a-msm8939-qrd-skuk/test01a-msm8939-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/test01a-msm8939-qrd-skuk/test01a-msm8939-pinctrl.dtsi
@@ -194,12 +194,12 @@
 		sdhc2_cd_pin {
 			sdc2_cd_on: cd_on {
 				mux {
-					pins = "gpio38";
+					pins = "gpio108";
 					function = "gpio";
 				};
 
 				config {
-					pins = "gpio38";
+					pins = "gpio108";
 					drive-strength = <2>;
 					bias-pull-up;
 				};
@@ -207,12 +207,12 @@
 
 			sdc2_cd_off: cd_off {
 				mux {
-					pins = "gpio38";
+					pins = "gpio1078";
 					function = "gpio";
 				};
 
 				config {
-					pins = "gpio38";
+					pins = "gpio108";
 					drive-strength = <2>;
 					bias-disable;
 				};
@@ -601,12 +601,12 @@
 		tlmm_gpio_key {
 			gpio_key_active: gpio_key_active {
 				mux {
-					pins = "gpio107", "gpio108", "gpio109";
+					pins = "gpio107", "gpio109";
 					function = "gpio";
 				};
 
 				config {
-					pins = "gpio107", "gpio108", "gpio109";
+					pins = "gpio107", "gpio109";
 					drive-strength = <2>;
 					bias-pull-up;
 				};
@@ -614,12 +614,12 @@
 
 			gpio_key_suspend: gpio_key_suspend {
 				mux {
-					pins = "gpio107", "gpio108", "gpio109";
+					pins = "gpio107", "gpio109";
 					function = "gpio";
 				};
 
 				config {
-					pins = "gpio107", "gpio108", "gpio109";
+					pins = "gpio107", "gpio109";
 					drive-strength = <2>;
 					bias-pull-up;
 				};
