--- a/arch/arm/boot/dts/qcom/lineage-msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/lineage-msm8939-common.dtsi
@@ -11,12 +11,10 @@
  */
 
 / {
-	memory {
-
+	reserved-memory {
 		pstore_reserve_mem: pstore_reserve_region@0 {
-			linux,reserve-contiguous-region;
-			linux,reserve-region;
-			linux,remove-completely;
+			compatible = "removed-dma-pool";
+			no-map;
 			reg = <0x0 0xdfe00000 0x0 0x00200000>;
 			label = "pstore_reserve_mem";
 		};
@@ -29,11 +27,19 @@
 		status = "ok";
 
 		android,ramoops-buffer-start = <0xdfe00000>;
-		android,ramoops-buffer-size = <0x200000>;
-		android,ramoops-console-size = <0x50000>;
-		android,ramoops-record-size = <0x40000>;
-		android,ramoops-annotate-size = <0x1000>;
+		android,ramoops-buffer-size = <0x100000>;
+		android,ramoops-console-size = <0x40000>;
+		android,ramoops-record-size = <0x20000>;
+		android,ramoops-ftrace-size = <0x20000>;
+		android,ramoops-pmsg-size = <0x20000>;
 		android,ramoops-dump-oops = <0x1>;
+
+		linux,contiguous-region = <&pstore_reserve_mem>;
+
+		android,ramoops-hole {
+			compatible = "qcom,msm-contig-mem";
+			qcom,memblock-reserve = <0xdfe00000 0x00200000>;
+		};
 	};
 
 };	
