--- a/arch/arm/boot/dts/qcom/msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-common.dtsi
@@ -31,8 +31,8 @@
 		i2c4 = &i2c_4;
 		i2c5 = &i2c_5;
 		i2c6 = &i2c_6;
-		//spi0 = &spi_0;
-		//spi5 = &spi_5;
+		spi0 = &spi_0;
+		spi5 = &spi_5;
 	};
 
 	reserved-memory {
@@ -40,10 +40,10 @@
 		#size-cells = <2>;
 		ranges;
 
-		external_image_mem: external_image_region@0 {
+		external_image_mem: external_image__region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x86000000 0x0 0x0800000>;
+			reg = <0x0 0x85B00000 0x0 0xD00000>;
 		};
 
 		modem_adsp_mem: modem_adsp_region@0 {
@@ -52,7 +52,7 @@
 			reg = <0x0 0x86800000 0x0 0x05500000>;
 		};
 
-		peripheral_mem: pheripheral_region@0 {
+		peripheral_mem: peripheral_region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
 			reg = <0x0 0x8bd00000 0x0 0x0600000>;
@@ -61,29 +61,34 @@
 		venus_mem: venus_region@0 {
 			compatible = "shared-dma-pool";
 			reusable;
+			alloc-ranges = <0x0 0x80000000 0x0 0x10000000>;
+			alignment = <0 0x400000>;
 			size = <0 0x0800000>;
 		};
 
 		secure_mem: secure_region@0 {
 			compatible = "shared-dma-pool";
 			reusable;
+			alignment = <0 0x400000>;
 			size = <0 0x7000000>;
 		};
 
 		qseecom_mem: qseecom_region@0 {
 			compatible = "shared-dma-pool";
 			reusable;
+			alignment = <0 0x400000>;
 			size = <0 0x1000000>;
 		};
 
 		audio_mem: audio_region@0 {
 			compatible = "shared-dma-pool";
 			reusable;
+			alignment = <0 0x400000>;
 			size = <0 0x400000>;
 		};
 
 		cont_splash_mem: splash_region@83000000 {
-			reg = <0x0 0x83000000 0x0 0x2000000>;
+			reg = <0x0 0x8dd00000 0x0 0x2000000>;
 		};
 	};
 
@@ -1047,7 +1052,6 @@
 		qcom,master-id = <86>;
 	};
 
-#if 0
 	spi_0: spi@78b7000 { /* BLSP1 QUP3 */
 		compatible = "qcom,spi-qup-v2";
 		#address-cells = <1>;
@@ -1072,7 +1076,6 @@
 		qcom,bam-producer-pipe-index = <9>;
 		qcom,master-id = <86>;
 		};
-#endif
 
 	i2c_4: i2c@78b8000 { /* BLSP1 QUP4 */
 		compatible = "qcom,i2c-msm-v2";
@@ -1124,7 +1127,6 @@
 		qcom,master-id = <86>;
 	};
 
-#if 0
 	spi_5: spi@78b9000 {  /* BLSP1 QUP5 */
 		compatible = "qcom,spi-qup-v2";
 		#address-cells = <1>;
@@ -1151,7 +1153,6 @@
 		qcom,rt-priority;
 		status = "disabled";
 	};
-#endif
 
 	spmi_bus: qcom,spmi@200f000 {
 		compatible = "qcom,spmi-pmic-arb";
