--- a/arch/arm64/configs/mobee01a_defconfig
+++ b/arch/arm64/configs/mobee01a_defconfig
@@ -305,12 +305,10 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_PINCTRL_MSM8939=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_SMB1360_CHARGER_FG=y
-CONFIG_BATTERY_BCL=y
-CONFIG_MSM_BCL_CTL=y
-CONFIG_MSM_BCL_PERIPHERAL_CTL=y
+CONFIG_SMB1360_CHARGER_FG_TEST=y
+CONFIG_BATTERY_BCL=n
 CONFIG_POWER_RESET_MSM=y
-CONFIG_MSM_DLOAD_MODE=y
+# CONFIG_MSM_DLOAD_MODE is not set
 CONFIG_MSM_PM=y
 CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
@@ -388,7 +386,11 @@ CONFIG_MMC_SDHCI_MSM_ICE=y
 CONFIG_MMC_CQ_HCI=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-CONFIG_LEDS_LP5562=y
+CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_QPNP=y
+CONFIG_LEDS_MSM_GPIO_FLASH=y
+CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_aw2013rgb=y
 CONFIG_SWITCH=y
 CONFIG_EDAC=y
 CONFIG_EDAC_MM_EDAC=y
