--- a/arch/arm64/configs/mobee01a_defconfig
+++ b/arch/arm64/configs/mobee01a_defconfig
@@ -305,7 +305,7 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_PINCTRL_MSM8939=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_SMB1360_CHARGER_FG_TEST=y
+CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_BATTERY_BCL=n
 CONFIG_POWER_RESET_MSM=y
 # CONFIG_MSM_DLOAD_MODE is not set
@@ -368,6 +368,7 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_USB_GADGET=y
+CONFIG_MSM_IOMMU_V1=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_CI13XXX_MSM=y
